Modificación de lab06

--- a/00_Laboratorio/source/lab06-reg_logistica.ipynb
+++ b/00_Laboratorio/source/lab06-reg_logistica.ipynb
@@ -25,6 +25,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "# Importar Librerias\n",
     "import os\n",
     "import email\n",
     "import string\n",
@@ -34,10 +35,10 @@
     "from sklearn.feature_extraction.text import CountVectorizer\n",
     "from sklearn.linear_model import LogisticRegression\n",
     "\n",
-    "# ✅ Descargar stopwords de NLTK\n",
+    "# Descargar stopwords de NLTK\n",
     "nltk.download('stopwords')\n",
     "\n",
-    "# 📌 Clase de preprocesamiento\n",
+    "# Clase de preprocesamiento\n",
     "class Parser:\n",
     "    def __init__(self):\n",
     "        self.stemmer = nltk.PorterStemmer()\n",
@@ -91,7 +92,7 @@
     "        tokens = list(filter(None, text.split(\" \")))\n",
     "        return [self.stemmer.stem(w.lower()) for w in tokens if w.lower() not in self.stopwords]\n",
     "\n",
-    "# ✅ Funciones auxiliares\n",
+    "# Funciones auxiliares\n",
     "DATASET_PATH = os.path.join(\"datasets\", \"trec07p\")\n",
     "\n",
     "def parse_index(path_to_index, n_elements):\n",
@@ -124,18 +125,18 @@
     "            pass\n",
     "    return X, y\n",
     "\n",
-    "# ✅ Carga y preprocesamiento de los correos\n",
+    "# Carga y preprocesamiento de los correos\n",
     "X_train_text, y_train = create_prep_dataset(\"datasets/trec07p/full/index\", 100)\n",
     "\n",
-    "# ✅ Vectorizador con solo la palabra 'free'\n",
+    "# Vectorizador con solo la palabra 'free'\n",
     "vectorizer = CountVectorizer(vocabulary=['free'])  # Solo esa palabra\n",
     "X_train_single = vectorizer.fit_transform(X_train_text)\n",
     "\n",
-    "# ✅ Entrenamiento del modelo de regresión logística\n",
+    "# Entrenamiento del modelo de regresión logística\n",
     "clf = LogisticRegression()\n",
     "clf.fit(X_train_single, y_train)\n",
     "\n",
-    "# ✅ Visualización: función logística\n",
+    "# Visualización: función logística\n",
     "theta_0 = clf.intercept_[0]\n",
     "theta_1 = clf.coef_[0][0]\n",
     "\n",
@@ -144,7 +145,7 @@
     "logits = theta_0 + theta_1 * x_vals\n",
     "sigmoid = 1 / (1 + np.exp(-logits))\n",
     "\n",
-    "# ✅ Gráfico de la función sigmoide\n",
+    "# Gráfico de la función sigmoide\n",
     "plt.figure(figsize=(8, 5))\n",
     "plt.plot(x_vals, sigmoid, label='P(spam|x)', color='blue')\n",
     "plt.axhline(0.5, color='gray', linestyle='--', label='Umbral de decisión')\n",
